force-app/main/default/objects/CoIT_SFS_Attachment_Click__c/CoIT_SFS_Attachment_Click__c.object-meta.xml
<CustomObject>
    <label>SFS Attachment Click</label>
    <nameField>
        <displayFormat>F-{000000000}</displayFormat>
        <label>SFS Attachment Click Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SFS Attachments Click</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>