force-app/main/default/objects/CoIT_SFS_Attachment_Click__c/fields/CoIT_Activation_Click__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Activation_Click__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Activation Click</label>
    <type>Checkbox</type>
</CustomField>