force-app/main/default/objects/CoIT_SFS_Attachment_Click__c/fields/CoIT_Call_ID__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Call_ID__c</fullName>
    <label>Call ID</label>
    <length>64</length>
    <type>Text</type>
</CustomField>