force-app/main/default/objects/CoIT_SFS_Attachment_Click__c/fields/CoIT_ExternalURL_SO__c.field-meta.xml
<CustomField>
    <fullName>CoIT_ExternalURL_SO__c</fullName>
    <label>ExternalURL_SO</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>