force-app/main/default/objects/CoIT_SFS_Attachment_Click__c/fields/CoIT_File_Name__c.field-meta.xml
<CustomField>
    <fullName>CoIT_File_Name__c</fullName>
    <label>File Name</label>
    <length>512</length>
    <type>LongTextArea</type>
</CustomField>