force-app/main/default/objects/CoIT_SFS_Attachment_Click__c/fields/CoIT_Is_Pending_Upload__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Is_Pending_Upload__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Pending Upload</label>
    <type>Checkbox</type>
</CustomField>