force-app/main/default/objects/CoIT_SFS_Attachment_Click__c/fields/CoIT_Number__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Number__c</fullName>
    <label>Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>