force-app/main/default/objects/CoIT_SFS_Attachment_Click__c/fields/CoIT_Response__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Response__c</fullName>
    <label>CoIT_Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>