force-app/main/default/objects/CoIT_SFS_Attachment_Click__c/fields/CoIT_Time_Attached__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Time_Attached__c</fullName>
    <label>Time Attached</label>
    <type>DateTime</type>
</CustomField>