force-app/main/default/objects/CoIT_SFS_Attachment_Click__c/fields/CoIT_Upload_Date__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Upload_Date__c</fullName>
    <label>Upload Date</label>
    <type>DateTime</type>
</CustomField>