force-app/main/default/objects/CoIT_SFS_Attachment_Click__c/fields/CoIT_UploadedBy__c.field-meta.xml
<CustomField>
    <fullName>CoIT_UploadedBy__c</fullName>
    <label>UploadedBy</label>
    <length>128</length>
    <type>Text</type>
</CustomField>