force-app/main/default/objects/CoIT_SFS_Attachment_Click__c/listViews/All_SFS_Attachments_Click.listView-meta.xml
<ListView>
    <fullName>All_SFS_Attachments_Click</fullName>
    <columns>NAME</columns>
    <columns>CoIT_Call_ID__c</columns>
    <columns>CoIT_Response__c</columns>
    <columns>CoIT_ExternalURL_SO__c</columns>
    <filterScope>Everything</filterScope>
    <label>All SFS Attachments Click</label>
</ListView>